--- a/roles/inventory-creator/files/group_vars/OSEv3.yml
+++ b/roles/inventory-creator/files/group_vars/OSEv3.yml
@@ -6,6 +6,7 @@ ansible_ssh_user: ec2-user
 ansible_become: true
 deployment_type: openshift-enterprise
 
+# openshift_master_cluster_method: native
 openshift_master_identity_providers: [{'name': 'htpasswd_auth', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider', 'filename': '/etc/origin/master/htpasswd'}]
 openshift_master_htpasswd_users: { '{{ rh_user }}': '{{ pass_output.stdout }}' } # {{ rh_pass }}
 
