--- a/roles/provisioners/node/tasks/main.yml
+++ b/roles/provisioners/node/tasks/main.yml
@@ -15,6 +15,10 @@
       groups:
         - masters
         - nodes
+        - etcd
+      security_groups:
+        - masters
+        - nodes
       schedulable: no
   with_dict: "{{ masters }}"
   loop_control:
@@ -25,6 +29,8 @@
   vars:
     defaults:
       groups:
+        - nodes
+      security_groups:
         - nodes
   with_dict: "{{ nodes | default({}) }}"
   loop_control:
