--- a/roles/openshift-host/tasks/subscribe.yml
+++ b/roles/openshift-host/tasks/subscribe.yml
@@ -1,9 +1,4 @@
 - name: register with Red Hat Subscription Manager
   become: yes
   become_user: root
-  redhat_subscription: 
-    state: present
-    username: "{{ rh_user }}"
-    password: "{{ rh_pass }}"
-    autosubscribe: true
-  register: subscription
+  shell: subscription-manager register --username {{ rh_user }} --password {{ rh_pass }} --auto-attach --force
